--- a/projetos/templates/projetos/organizacoes_lista.html
+++ b/projetos/templates/projetos/organizacoes_lista.html
@@ -7,10 +7,27 @@
 
 {% block head %}
 <script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>
+    var todos_contactados = 0
+    var so_contactados = 0
+    var confirmados = 0
+    var interessados = 0
+    var recusados = 0
+</script>
 {% endblock %}
 
 {% block content %}
   <h3>Organizações Parceiras</h3>
+  <label for="filter">Filtrar:</label>
+  <select id="cxi" class="filter" data-tableId="OrganizacoesTable">
+    <option value="todas">todas</option>
+    <option value="contactadas" {% if filtro == "todas contactadas" %}selected="selected"{% endif %}>todas contactadas</option>
+    <option value="0" {% if filtro == "sem retorno" %}selected="selected"{% endif %}>sem retorno</option>
+    <option value="1" {% if filtro == "confirmadas" %}selected="selected"{% endif %}>confirmadas</option>
+    <option value="2" {% if filtro == "interessadas" %}selected="selected"{% endif %}>interessadas</option>
+    <option value="3" {% if filtro == "recusaram" %}selected="selected"{% endif %}>recusaram</option>
+  </select>
+  <br><br>
   {% if organizacoes_list %}
     <table id="OrganizacoesTable">
       <tr>
@@ -20,28 +37,42 @@
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Organização</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Último<br>Contato</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Desde</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Projetos<br>Enviados</th>
+        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Propostas<br>Enviadas</th>
         <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projetos<br>Fechados</th>
       </tr>
       {% for organizacao,fechados,desde,contato in organizacoes_list %} 
-        <tr class="item" style="
+        <tr class="item" 
         {% if contato != '---------' %}
           {% if contato.momento|date:'Ymd' > meses3|date:'Ymd' %}
-            background-color:
+            style="background-color:
             {% if contato.tipo_de_retorno == 0 %}
-              lightblue
+              lightblue" 
             {% elif contato.tipo_de_retorno == 1 %}
-              lightgreen
+              lightgreen"
             {% elif contato.tipo_de_retorno == 2 %}
-              lemonchiffon
+              lemonchiffon"
             {% elif contato.tipo_de_retorno == 3 %}
-              pink
+              pink" 
+            {% endif %}
+            data-type="{{contato.tipo_de_retorno}}"
+          {% endif %}
+        {% endif %}
+        >
+
+        {% if contato != '---------' %}
+          {% if contato.momento|date:'Ymd' > meses3|date:'Ymd' %}
+            <script>todos_contactados += 1</script>
+            {% if contato.tipo_de_retorno == 0 %}
+              <script>so_contactados += 1</script>
+            {% elif contato.tipo_de_retorno == 1 %}
+              <script>confirmados += 1</script>
+            {% elif contato.tipo_de_retorno == 2 %}
+              <script>interessados += 1</script>
+            {% elif contato.tipo_de_retorno == 3 %}
+              <script>recusados += 1</script>
             {% endif %}
           {% endif %}
         {% endif %}
-
-
-        ">
 
         {% comment %}
           <td>
@@ -51,6 +82,7 @@
           </td>
         {% endcomment %}
           <td>
+          {{contato.tipo_de_retorno}}
             <a href="{% url 'organizacao_completo' organizacao.login %}"> <!-- UM DIA ACERTAR ISSO -->
               {{organizacao.nome_empresa}}
             </a>
@@ -75,20 +107,48 @@
         </tr>
       {% endfor %}
     </table>
-    Contactadas recentemente: 
-    <span style="background-color:lightblue">&nbsp;&nbsp;&nbsp;&nbsp;</span> Contactada
-    <span style="background-color:pink">&nbsp;&nbsp;&nbsp;&nbsp;</span> Recusou
-    <span style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;&nbsp;</span> Interessada
-    <span style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;&nbsp;</span> Confirmada
+    Contactadas recentemente (<script>document.write(todos_contactados);</script>):<br>
+    &nbsp;<span style="background-color:lightblue">&nbsp;&nbsp;&nbsp;&nbsp;</span> Contactada (<script>document.write(so_contactados);</script>)<br>
+    &nbsp;<span style="background-color:pink">&nbsp;&nbsp;&nbsp;&nbsp;</span> Recusou (<script>document.write(recusados);</script>)<br>
+    &nbsp;<span style="background-color:lemonchiffon">&nbsp;&nbsp;&nbsp;&nbsp;</span> Interessada (<script>document.write(interessados);</script>)<br>
+    &nbsp;<span style="background-color:lightgreen">&nbsp;&nbsp;&nbsp;&nbsp;</span> Confirmada (<script>document.write(confirmados);</script>)<br>
     <p>&nbsp;</p>
     <strong>Total de Organizações Parceiras:</strong> {{ total_organizacoes }}<br>
-    <strong>Total de Projetos Submetidos:</strong> {{ total_submetidos }}<br>
+    <strong>Total de Propostas Submetidas:</strong> {{ total_submetidos }}<br>
     <strong>Total de Projetos Fechados:</strong> {{ total_fechados }}<br>
   {% else %}
     <p>Não existem organizações cadastradas.</p>
   {% endif %}
 
+  <p>&nbsp;</p>
 
-    <p>&nbsp;</p>
+  <script type="text/javascript">
+
+    function filtra_data() {  // REFERENTE AO SELETOR DE DATAS
+      var filterValue = $('.filter').val();
+      var row = $('.item'); 
+      row.hide();
+
+      row.each(function(i, el) {
+        
+        if( filterValue == "todas" || filterValue == $(el).attr('data-type') ) {
+            $(el).show();
+        }
+        else if( filterValue == "contactadas" && $(el).attr('data-type') >= 0 ) {
+            $(el).show();
+        }
+
+      });
+    }
+
+    $(".filter").change(function(){
+      filtra_data();
+    });  
+
+    $(document).ready(function(){
+      filtra_data();
+    });
+  
+  </script>
 
 {% endblock %}
