--- a/projetos/templates/projetos/avaliacao.html
+++ b/projetos/templates/projetos/avaliacao.html
@@ -67,7 +67,7 @@
         <br>
       {% endif %}
       
-      <br><b>Avaliador(a)</b>:
+      <br><b><label for="avaliador">Avaliador(a)</label></b>:
       <select name="avaliador" id="avaliador" title="Selecione avaliador da banca" required>
           <option disabled selected value> -- selecione um avaliador -- </option>
           {% for professor in pessoas %}
@@ -94,20 +94,20 @@ No Projeto Final de Engenharia, a maioria dos projetos está sob sigilo. Nos con
         <b>{{objetivo.titulo}}</b>: {{objetivo.objetivo}}
         <table style="width:100%">
           <tr>
-            <th style="width:18%"><input type="radio" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.I " required> Insatisfatório (I)</th>
-            <th style="width:18%"><input type="radio" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.D " required> Em Desenvolvimento (D)</th>
-            <th style="width:18%"><input type="radio" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.C " required> Essencial (C)</th>
-            <th style="width:18%"><input type="radio" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.B " required> Proficiente (B)</th>
-            <th style="width:18%"><input type="radio" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.A " required> Avançado (A)</th>
-            <th style="width:10%"><input type="radio" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.NA" required> N/A</th>
+            <th style="width:18%"><input type="radio" id="objetivo.{{forloop.counter}}{{objetivo.id}}.I " name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.I " required> <label for="objetivo.{{forloop.counter}}{{objetivo.id}}.I ">Insatisfatório (I)</label></th>
+            <th style="width:18%"><input type="radio" id="objetivo.{{forloop.counter}}{{objetivo.id}}.D " name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.D " required> <label for="objetivo.{{forloop.counter}}{{objetivo.id}}.D ">Em Desenvolvimento (D)</label></th>
+            <th style="width:18%"><input type="radio" id="objetivo.{{forloop.counter}}{{objetivo.id}}.C " name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.C " required> <label for="objetivo.{{forloop.counter}}{{objetivo.id}}.C ">Essencial (C)</label></th>
+            <th style="width:18%"><input type="radio" id="objetivo.{{forloop.counter}}{{objetivo.id}}.B " name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.B " required> <label for="objetivo.{{forloop.counter}}{{objetivo.id}}.B ">Proficiente (B)</label></th>
+            <th style="width:18%"><input type="radio" id="objetivo.{{forloop.counter}}{{objetivo.id}}.A " name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.A " required> <label for="objetivo.{{forloop.counter}}{{objetivo.id}}.A ">Avançado (A)</label></th>
+            <th style="width:10%"><input type="radio" id="objetivo.{{forloop.counter}}{{objetivo.id}}.NA" name="objetivo.{{ forloop.counter }}" value="{{objetivo.id}}.NA" required> <label for="objetivo.{{forloop.counter}}{{objetivo.id}}.NA">N/A</label></th>
           </tr>
           <tr>
-            <td>{{objetivo.rubrica_I}}</td>
-            <td>{{objetivo.rubrica_D}}</td>
-            <td>{{objetivo.rubrica_C}}</td>
-            <td>{{objetivo.rubrica_B}}</td>
-            <td>{{objetivo.rubrica_A}}</td>
-            <td>caso prefira não avaliar este objetivo, selecione esta coluna.</td>
+            <td><label for="objetivo.{{forloop.counter}}{{objetivo.id}}.I ">{{objetivo.rubrica_I}}</label></td>
+            <td><label for="objetivo.{{forloop.counter}}{{objetivo.id}}.D ">{{objetivo.rubrica_D}}</label></td>
+            <td><label for="objetivo.{{forloop.counter}}{{objetivo.id}}.C ">{{objetivo.rubrica_C}}</label></td>
+            <td><label for="objetivo.{{forloop.counter}}{{objetivo.id}}.B ">{{objetivo.rubrica_B}}</label></td>
+            <td><label for="objetivo.{{forloop.counter}}{{objetivo.id}}.A ">{{objetivo.rubrica_A}}</label></td>
+            <td><label for="objetivo.{{forloop.counter}}{{objetivo.id}}.NA">caso prefira não avaliar este objetivo, selecione esta coluna.</label></td>
           </tr>
         </table><br>
       {% endfor %}
