--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -21,7 +21,7 @@
 
 {% block content %}
   <label for="filter">Edição:</label>
-  <select class="filter" data-tableId="projetos">
+  <select id="filter" class="filter" data-tableId="projetos">
     <option value="2018.2">2018.2</option>
     <option value="2019.1">2019.1</option>
     <option value="2019.2">2019.2</option>
