--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -17,7 +17,7 @@
 
   <h3>Projetos Fechados</h3>
   <label for="filter">Edição:</label>
-  <select id="cxi" class="filter" data-tableId="projetos">
+  <select id="filter" class="filter" data-tableId="projetos">
     <option value="todas">todas</option>
     <option value="2018.2" {% if periodo == "2018.2" %}selected="selected"{% endif %}>2018.2</option>
     <option value="2019.1" {% if periodo == "2019.1" %}selected="selected"{% endif %}>2019.1</option>
