--- a/projetos/templates/index_professor.html
+++ b/projetos/templates/index_professor.html
@@ -15,12 +15,18 @@
         <a href="{% url 'dinamicas' 'proximas' %}"><li>Dinâmicas</li></a>
     </ul>
 
-    <h5>Projetos</h5>
+    <h5>Projetos Fechados</h5>
     <ul>
         <a href="{% url 'professor_detail' professor_id %}"><li>Meu(s) Projeto(s)</li></a>
-        <a href="{% url 'projetos_fechados' %}"><li>Detalhes (somente os fechados)</li></a>
+        <a href="{% url 'projetos_fechados' %}"><li>Lista com Detalhes</li></a>
+    </ul>
+
+    <h5>Proposta de Projetos</h5>
+    <ul>
+        <a href="{% url 'projetos_lista' 'disponiveis' %}"><li>Propostas Apresentadas (OLD)</li></a>
+        <a href="{% url 'propostas_lista' 'disponiveis' %}"><li>Propostas Apresentadas</li></a>
         <a href="{% url 'histograma' %}"><li>Procura (histograma de preferências)</li></a>
-        <a href="{% url 'projetos_lista' 'disponiveis' %}"><li>Disponíveis (p/ os próximos semestres)</li></a>
+        
     </ul>
 
     <h5>Estudantes</h5>
