--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -49,6 +49,7 @@
   {% if projeto.avancado %}
     <strong style="color:red"><u>PFE Avançado</u></strong><br>
   {% endif %}
+  <a href="{% url 'proposta_completa' projeto.proposta.id %}"><strong>Link para proposta do projeto</strong></a><br>
   <br>
 
   <strong>Descrição:</strong> {{ projeto.proposta.descricao|linebreaks }}
@@ -181,227 +182,6 @@
   <br>
 
   <a class="myButton" href="{% url 'conceitos_obtidos' projeto.id %}">Avaliações</a>
-
-  <hr>
-  <h3>Aluno(s) Aplicando para o Projeto</h3>
-  {% for opcao in projeto.opcao_set.all %}
-    {% if projeto.ano == opcao.aluno.anoPFE and projeto.semestre == opcao.aluno.semestrePFE %}
-    <a href="{% url 'aluno_detail' opcao.aluno.id %}">
-      <p class="{% if opcao.prioridade <= 5 %}green-bold{% else %}yellow-bold{% endif %}">
-        {{opcao.aluno.user.get_full_name}}
-        [{{ opcao.aluno.get_curso_display }}]
-        &nbsp;=>&nbsp;opção #{{opcao.prioridade}}
-        &nbsp;|&nbsp;{ {{opcao.aluno.anoPFE}}.{{opcao.aluno.semestrePFE}} }
-        &nbsp;CR={{opcao.aluno.cr}}
-      </p>
-    </a>
-    {% endif %}
-  {% endfor %}
-  <p style="line-height:2px">
-    --------------------------------------------------------------------------------------
-  </p>
-  {% for opcao in projeto.opcao_set.all %}
-    {% if projeto.ano != opcao.aluno.anoPFE or projeto.semestre != opcao.aluno.semestrePFE %}
-    <a href="{% url 'aluno_detail' opcao.aluno.id %}">
-      <p class="red-bold">
-        {{opcao.aluno.user.get_full_name}}
-        [{{ opcao.aluno.get_curso_display }}]
-        &nbsp;=>&nbsp;opção #{{opcao.prioridade}}
-        &nbsp;|&nbsp;{ {{opcao.aluno.anoPFE}}.{{opcao.aluno.semestrePFE}} }
-        &nbsp;CR={{opcao.aluno.cr}}
-      </p>
-    </a>
-    {% endif %}
-  {% endfor %}
-
-  <br><hr>
-  <h3>Perfil de Alunos Desejados para Projeto</h3>
-  <table>
-    <tr>
-        <th style="text-align:center" >
-            Aluno
-        </th>
-        <th style="text-align:center" >
-            Computação
-        </th>
-        <th style="text-align:center" >
-            Mecânica
-        </th>
-        <th style="text-align:center" >
-            Mecatrônica
-        </th>
-    </tr>
-    <tr> <!-- NAO EH A FORMA MAIS ELEGANTE MAS FUNCIONA POR ENQUANTO -->
-      <td>Aluno 1</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno1_computacao %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno1_mecanica %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno1_mecatronica %}checked{% endif %}>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>Aluno 2</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno2_computacao %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno2_mecanica %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno2_mecatronica %}checked{% endif %}>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>Aluno 3</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno3_computacao %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno3_mecanica %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno3_mecatronica %}checked{% endif %}>&nbsp;</td>
-    </tr>
-    <tr>
-      <td>Aluno 4</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno4_computacao %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno4_mecanica %}checked{% endif %}>&nbsp;</td>
-      <td style="text-align:center">&nbsp;<input type="checkbox" name="selection" value="{{projeto.id}}" 
-        {% if projeto.proposta.perfil_aluno4_mecatronica %}checked{% endif %}>&nbsp;</td>
-    </tr>
-  </table>
-
-  {% if projeto.recomendada_set.all %}
-  <br><hr>
-  <h3>Disciplina(s) Recomendada(s)</h3>
-  <table>
-    <tr>
-      <th>
-        Disciplina
-      </th>
-    </tr>
-    {% for rec in projeto.recomendada_set.all %}
-    <tr><td>
-        {{rec.disciplina.nome}}
-    </td></tr>
-    {% endfor %}
-  </table>
-  {% endif %}
-
-
-
-  {% if projeto.proposta.areas_de_interesse %}
-    <br><hr>
-    <h3>Áreas de Interesse</h3>
-    <table>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="inovacao_social" 
-            {% if projeto.proposta.areas_de_interesse.inovacao_social %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Inovação Social</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="ciencia_dos_dados" 
-            {% if projeto.proposta.areas_de_interesse.ciencia_dos_dados %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Ciência dos Dados</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="modelagem_3D" 
-            {% if projeto.proposta.areas_de_interesse.modelagem_3D %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Modelagem 3D</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="manufatura" 
-            {% if projeto.proposta.areas_de_interesse.manufatura %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Manufatura</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="resistencia_dos_materiais" 
-            {% if projeto.proposta.areas_de_interesse.resistencia_dos_materiais %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Resistência dos Materiais</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="modelagem_de_sistemas" 
-            {% if projeto.proposta.areas_de_interesse.modelagem_de_sistemas %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Modelagem de Sistemas</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="controle_e_automacao" 
-            {% if projeto.proposta.areas_de_interesse.controle_e_automacao %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Controle e Automação</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="termodinamica" 
-            {% if projeto.proposta.areas_de_interesse.termodinamica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Termodinâmica</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="fluidodinamica" 
-            {% if projeto.proposta.areas_de_interesse.fluidodinamica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Fluidodinâmica</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="eletronica_digital" 
-            {% if projeto.proposta.areas_de_interesse.eletronica_digital %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Eletrônica Digital</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="programacao" 
-            {% if projeto.proposta.areas_de_interesse.programacao %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Programação</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="inteligencia_artificial" 
-            {% if projeto.proposta.areas_de_interesse.inteligencia_artificial %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Inteligência Artificial</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="computacao_em_nuvem" 
-            {% if projeto.proposta.areas_de_interesse.computacao_em_nuvem %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Computação em Nuvem</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="banco_de_dados" 
-            {% if projeto.proposta.areas_de_interesse.banco_de_dados %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Banco de Dados</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="visao_computacional" 
-            {% if projeto.proposta.areas_de_interesse.visao_computacional %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Visão Computacional</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="computacao_de_alto_desempenho" 
-            {% if projeto.proposta.areas_de_interesse.computacao_de_alto_desempenho %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Computação de Alto Desempenho</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="robotica" 
-            {% if projeto.proposta.areas_de_interesse.robotica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Robótica</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="realidade_virtual_aumentada" 
-            {% if projeto.proposta.areas_de_interesse.realidade_virtual_aumentada %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Realidade Virtual/Aumentada</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="protocolos_de_comunicacao" 
-            {% if projeto.proposta.areas_de_interesse.protocolos_de_comunicacao %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Protocolos de Comunicação</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="eficiencia_energetica" 
-            {% if projeto.proposta.areas_de_interesse.eficiencia_energetica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Eficiência Energética</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="administracao_economia_financas" 
-            {% if projeto.proposta.areas_de_interesse.administracao_economia_financas %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Administração, Economia e Finanças</td>
-    </tr>
-    </table>
-    {% if projeto.proposta.areas_de_interesse.outras %}
-      Outras: {{projeto.proposta.areas_de_interesse.outras}}
-    {% endif %}
-  {% endif %}
 
   <p>&nbsp;</p>
 
