--- a/projetos/templates/projetos/dinamicas.html
+++ b/projetos/templates/projetos/dinamicas.html
@@ -24,7 +24,7 @@
           <td>
             <big><b>{{e.startDate}} - {{e.endDate|date:'H:i'}}</b></big><br>
             {% if e.projeto %}
-              <b>Projeto:</b> <a href="{% url 'completo' e.projeto.id %}">
+              <b>Projeto:</b> <a href="{% url 'projeto_completo' e.projeto.id %}">
                 {{e.projeto.get_titulo}}
               </a><br>
               <b>Organização:</b> <a href="{% url 'organizacao_completo' e.projeto.empresa.login %}">{{ e.projeto.empresa.nome_empresa }}</a><br>
