--- a/projetos/templates/projetos/tabela_documentos.html
+++ b/projetos/templates/projetos/tabela_documentos.html
@@ -38,7 +38,7 @@
         {% if projeto.disponivel %}
           <tr class="item">
             <td>
-              <a href="{% url 'completo' projeto.id %}">
+              <a href="{% url 'projeto_completo' projeto.id %}">
                 {% if projeto.titulo_final %}
                   {{projeto.titulo_final}}<br>
                   <small>Título Provisório: {{projeto.titulo}}</small>
